[project]
name = "litepolis-math-default"
version = "0.1.0"
description = "Mathematical algorithms module for LitePolis platform, providing PCA and KMeans implementations for user vote data analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "litepolis-database-default",
]
